Fix page double scroll bars

--- a/css/Default/stylesheet.css
+++ b/css/Default/stylesheet.css
@@ -1,9 +1,6 @@
-html, body
+html
 {
-  overflow-x:hidden !important;
-  overflow-y:scroll !important;
   height: 100%;
-  background-color:#f5f6f7;
 }
 
 img
